resources/webidl2/test/invalid/baseline/module.txt
Syntax error at line 2:
module gfx {
^ Unrecognised tokens
